# transcribo-backend

./: .dockerignore  .env.example  .env.schema  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  docker-compose.yml  entrypoint.sh  mkdocs.yml  mypy.ini  publiccode.yml  pyproject.toml  pyrefly.toml  renovate.json  run.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: docker-publish.yml  main.yml  on-release-main.yml
docs/: index.md  modules.md
scripts/: run-varlock.sh
src/transcribo_backend/: __init__.py  _version.py  app.py  config.py  container.py
src/transcribo_backend/agents/: summarize_agent.py
src/transcribo_backend/helpers/: file_type.py
src/transcribo_backend/models/: error_codes.py  language.py  progress.py  response_format.py  summary.py  task_status.py  transcription_response.py
src/transcribo_backend/routers/: __init__.py  summarization.py  tasks.py  transcription.py
src/transcribo_backend/routes/: summarize_route.py  transcribe_route.py
src/transcribo_backend/services/: audio_converter.py  summarization_service.py  summary_service.py  whisper_service.py
src/transcribo_backend/stubs/version_pioneer/: __init__.pyi  api.pyi  versionscript.pyi
src/transcribo_backend/utils/: app_config.py  logger.py  usage_tracking.py
tests/: conftest.py  test_audio_converter.py  test_foo.py  test_summarization_service_agent.py  test_transcribe_route.py  test_whisper_service.py
tests/assets/: sample-5s.flac  sample-5s.m4a
tests/integration/: test_whisper_integration.py
